# TodoList

./: pyproject.toml
src/todolist_wolfy/: todo.py  todolist.py
